--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,21 +1,35 @@
 .card {
+    height: 370px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    border: solid red;
+    border-radius: 5px;
+    box-shadow: 0 0 15px red;
     width: 280px;
     overflow: hidden;
+    transition: all 1s ease;
+}
+
+.card image{
+    display: flex;
+    position: absolute;
+    min-height: 285px;
+    margin-bottom: 10px;
+}
+
+.card:hover{
+    box-shadow: 0 0 25px red;
+    color: rgb(255, 177, 177);
 }
 
 .card h2,
 .card p {
-    margin: 10px 10px;
+    margin: auto 10px;
     /* padding: 0 10px; */
 }
 
-.card .btn{
-    /* align-items:center;
+.buttons{
+    display: flex;
     justify-content: center;
-    justify-content: center;
-    align-content: center; */
+
 }
