--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -2,11 +2,12 @@
 	background-color: red;
 	border: none;
     width: 60px ;
-	margin: 5px;
-    border-radius: 5px;
-	align-items: center;
-	align-content: center;
+	margin: 5px 5px 10px;
+	display: flex;
+	justify-content: center;
 	text-align: center;
+	
+    border-radius: 5px;
 	font-size: 20px;
     transition: all 1s ease-in-out;
     cursor: pointer;
