--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -3,18 +3,17 @@
     box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    border-radius: 5px;
+    justify-content: space-between;
+    border-radius: 1px;
     box-shadow: 0 0 15px red;
     width: 280px;
     overflow: hidden;
     transition: all 1s ease;
 }
 
-.card image{
-    display: flex;
-    position: absolute;
-    min-height: 285px;
-    margin-bottom: 10px;
+.card .imgContainer{
+    height: 160px;
+    overflow: hidden;
 }
 
 .card:hover{
@@ -24,7 +23,7 @@
 
 .card h2,
 .card p {
-    margin: auto 10px;
+    margin: 0 10px;
     /* padding: 0 10px; */
 }
 
